--- a/sass/modules/slider/_slider-style-two.scss
+++ b/sass/modules/slider/_slider-style-two.scss
@@ -59,7 +59,7 @@
           position: absolute;
           top: 50%;
           left: 50%;
-          transform: translate(-50%, -50%);
+          transform: translate(-50%, -30%);
           @include sm {
             width: 100%;
           }
@@ -84,6 +84,11 @@
           }
         }
         .image-wrapper {
+          img {
+            @include rwd(1600) {
+              height: 631px;
+            }
+          }
           @include sm {
             height: 300px;
             img {
@@ -140,7 +145,7 @@
             overflow: hidden;
             position: relative;
             &:before {
-              content: "";
+              content: '';
               position: absolute;
               width: 100%;
               height: 100%;
