--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -137,7 +137,7 @@
       position: absolute;
       left: 0;
       bottom: 0;
-      transform: translate(50px, 50px);
+      transform: none;
       @include rmaxwd(1399) {
         transform: translate(50px, 30px);
         color: $white;
@@ -153,6 +153,7 @@
       }
       p {
         transform: none;
+        line-height: 163px;
         @include lg {
           color: $white;
         }
@@ -254,6 +255,10 @@
     background-position: center;
     @include xl {
       padding-bottom: 200px;
+    }
+    @include md {
+      padding-bottom: 160px;
+      padding-top: 80px;
     }
     @include sm {
       padding: 60px 0;
