--- a/sass/partials/_title-section.scss
+++ b/sass/partials/_title-section.scss
@@ -55,7 +55,9 @@
     display: inline-flex;
     align-items: center;
     gap: 10px;
-
+    @include sm {
+      margin-bottom: 10px;
+    }
     // &::before,
     // &::after {
     //   content: "";
